# fiber-measure

./: .gitignore  GUI_README.md  README.md  debug_profile.py  pyproject.toml  sbatch_measure_all.sh
docs/superpowers/plans/: 2026-06-10-gui-simplification.md
docs/superpowers/specs/: 2026-06-10-gui-simplification-design.md
src/fibrecv/: __init__.py  band.py  compute.py  config.py  edges.py  features.py  gui_app.py  gui_launch.py  io_utils.py  manual_edit.py  measure.py  overlay.py  qc.py  register.py  run_aggregate.py  run_measure.py  tensile.py
tests/: test_edges_wall.py  test_gui_smoke.py  test_io_utils.py  test_manual_edit.py  test_tensile.py
