[project]
name = "fibrecv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "stan", email = "pokeyxiao@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "imageio>=2.37.3",
    "matplotlib>=3.10.9",
    "numpy>=1.26,<2",
    "pandas>=2.3.3",
    "pillow>=12.2.0",
    "scikit-image==0.24.*",
    "scipy>=1.17.1",
    "streamlit>=1.58.0",
]

[project.scripts]
fibrecv = "fibrecv:main"
fibrecv-gui = "fibrecv.gui_launch:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
