[project]
name = "fibrecv"
version = "0.1.0"
description = "Fibre diameter measurement from optical microscopy images: per-image boundary detection, QC, and replicate-registered diameter profiles, with a CLI pipeline and a local Streamlit GUI"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "stan", email = "pokeyxiao@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "imageio>=2.37.3",
    "matplotlib>=3.10.9",
    "numpy>=1.26,<2",
    "pandas>=2.3.3",
    "pillow>=12.2.0",
    "scikit-image==0.24.*",
    "scipy>=1.17.1",
    "streamlit>=1.58.0",
    "streamlit-image-coordinates>=0.4.0",
]

[project.scripts]
fibrecv = "fibrecv:main"
fibrecv-gui = "fibrecv.gui_launch:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
